gitops/base/internal-service/templates/deployment.yaml
---
# Source: internal-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isvc-dev-internal-service
  labels:
    app.kubernetes.io/name: internal-service
    app.kubernetes.io/instance: isvc-dev
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: web
spec:
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app.kubernetes.io/name: internal-service
      app.kubernetes.io/instance: isvc-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: internal-service
        app.kubernetes.io/instance: isvc-dev
        app.kubernetes.io/version: "0.1.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: web
      annotations:
        {}
    spec:
      serviceAccountName: isvc-dev-internal-service
      securityContext:
        fsGroup: 2000
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: internal-service
              app.kubernetes.io/instance: isvc-dev
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values: [ internal-service ]
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: app
          image: "ghcr.io/alexanderakulshin/internal-service:0.1.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
