gitops/base/internal-service/templates/service.yaml
---
# Source: internal-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isvc-dev-internal-service
  labels:
    app.kubernetes.io/name: internal-service
    app.kubernetes.io/instance: isvc-dev
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: web
  annotations:
    {}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: internal-service
    app.kubernetes.io/instance: isvc-dev
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
